assets/css/headerImages.css
.image-1 {
    background-image: url("../../images/ShieldOfSparta.png");
    background-position: center;
    background-size: cover;
    filter: saturate(0.35);
    border-top: 10px solid rgb(216, 216, 216);
    order: 3;
    position: relative;
}

.image-2 {
    /* background-color: rgb(105, 105, 105); */
    background-image: url("../../images/code.jpg");
    background-position: center;
    background-size: cover;
    filter: saturate(0.35);
    border-bottom: 10px solid rgb(216, 216, 216);
    order: 2;
    position: relative;
}

.profile-border-outer {
    background-color: #A8A8A8;
    border-radius: 50%;
    width: 400px;
    height: 400px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.profile-border-inner {
    background-color: #838383;
    border-radius: 50%;
    width: 80%;
    height: 80%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    box-shadow:  0 0 5px 5px rgba(0, 0, 0, 0.295);
}

.profile-image {
    background: url("../../images/Jake-Lonceras.jpg");
    background-position: center;
    background-size: cover;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    transform-origin: center;
    transform: scale(0.7);
    filter: saturate(0.1);
    cursor: pointer;
}

